--- a/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -58,12 +63,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAH-ad-jkK">
-                                <rect key="frame" x="16" y="26" width="28" height="28"/>
+                                <rect key="frame" x="18" y="28" width="24" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="Kjk-eG-uoA"/>
-                                    <constraint firstAttribute="width" constant="28" id="yJm-su-lpH"/>
+                                    <constraint firstAttribute="height" constant="24" id="Kjk-eG-uoA"/>
+                                    <constraint firstAttribute="width" constant="24" id="yJm-su-lpH"/>
                                 </constraints>
-                                <state key="normal" image="unchecked_checkbox"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <state key="normal" image="checkfilled"/>
                                 <connections>
                                     <action selector="chechBoxWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="O3Q-LV-WFf"/>
                                 </connections>
@@ -104,6 +110,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="unchecked_checkbox" width="128" height="128"/>
+        <image name="checkfilled" width="50" height="50"/>
     </resources>
 </document>
